# genai-basics

./: .gitignore  README.md  basic.py  data.txt  kit.txt  main.py  pyproject.toml  rag.py  rag_gemini_example.py  tool-calling.py  tool_calling.py
